--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,49 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+aiosqlite==0.19.0
 async-timeout==4.0.2
 attrs==23.1.0
+autopep8==2.0.2
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
+contourpy==1.0.7
+cycler==0.11.0
 disnake==2.8.1
 filelock==3.9.0
+fonttools==4.39.3
 frozenlist==1.3.3
 fsspec==2023.4.0
 huggingface-hub==0.14.1
 idna==3.4
+install==1.3.5
 Jinja2==3.1.2
 joblib==1.2.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.2
+matplotlib==3.7.1
 mpmath==1.2.1
 multidict==6.0.4
 networkx==3.0
 nltk==3.8.1
 numpy==1.24.3
 packaging==23.1
+pandas==2.0.1
 Pillow==9.3.0
+pycodestyle==2.10.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
 PyYAML==6.0
 regex==2023.3.23
 requests==2.28.1
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
 sympy==1.11.1
 textblob==0.17.1
+threadpoolctl==3.1.0
 tokenizers==0.13.3
 torch==2.0.0+cu118
 torchaudio==2.0.1+cu118
@@ -34,5 +51,6 @@ torchvision==0.15.1+cu118
 tqdm==4.65.0
 transformers==4.28.1
 typing_extensions==4.4.0
+tzdata==2023.3
 urllib3==1.26.13
 yarl==1.9.2
